<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/main_navheader">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_videos"
            android:icon="@drawable/drawer_videos"
            android:title="@string/Nav_Uploads"/>
        <item
            android:id="@+id/nav_playlists"
            android:icon="@drawable/drawer_playlists"
            android:title="@string/Nav_Playlists"/>
    </group>

    <group
        android:id="@+id/nav_bottomMenu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/drawer_settings"
            android:title="@string/Nav_Settings"/>
    </group>
</menu>